[package]
name = "size_hint"
version = "0.1.3"
authors = ["shimunn <shimun@shimun.net>"]
edition = "2018"
license = "MIT"
description = "A very simple library to provide a size_hint for an iterator which does not provide it's own"
repository = "https://github.com/shimunn/size_hint"
readme = "README.md"
keywords = ["iterator"]

[dependencies]
